added pictures and videos to the ReadMe

--- a/output/index.html
+++ b/output/index.html
@@ -31,7 +31,7 @@
           <div class="card-body">
               <ul class="list-group">
                   <li class="list-group-item">ID: 1</li>
-                  <li class="list-group-item">Email: <a href="mailto:Jnavieracevedo912@gmail.com">Jnavieracevedo912@gmail.com</a></li>
+                  <li class="list-group-item">Email: <a href="mailto:Jnavieracevedoi912@gmail.com">Jnavieracevedoi912@gmail.com</a></li>
                   <li class="list-group-item">Office number: 1</li>
               </ul>
           </div>
@@ -39,14 +39,14 @@
           
           <div class="card employee-card">
       <div class="card-header">
-          <h2 class="card-title">Michael</h2>
+          <h2 class="card-title">Gen</h2>
           <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
       </div>
       <div class="card-body">
           <ul class="list-group">
-              <li class="list-group-item">ID: 13</li>
-              <li class="list-group-item">Email: <a href="mailto:michael@michael.com">michael@michael.com</a></li>
-              <li class="list-group-item">GitHub: <a href="https://github.com/michael15" target="_blank" rel="noopener noreferrer">michael15</a></li>
+              <li class="list-group-item">ID: 78</li>
+              <li class="list-group-item">Email: <a href="mailto:gen@gen.com">gen@gen.com</a></li>
+              <li class="list-group-item">GitHub: <a href="https://github.com/gen12" target="_blank" rel="noopener noreferrer">gen12</a></li>
           </ul>
       </div>
   </div>
@@ -58,7 +58,7 @@
       </div>
       <div class="card-body">
           <ul class="list-group">
-              <li class="list-group-item">ID: 12</li>
+              <li class="list-group-item">ID: 14</li>
               <li class="list-group-item">Email: <a href="mailto:john@john.com">john@john.com</a></li>
               <li class="list-group-item">School: UCLA</li>
           </ul>
